[gd_scene load_steps=7 format=3 uid="uid://dku0k1jhjyjpm"]

[ext_resource type="Script" uid="uid://ifa6f5frgbik" path="res://addons/gameAssetImporter/scenes/console/console.gd" id="1_w2nb2"]
[ext_resource type="PackedScene" uid="uid://bbbgj6xynhxxw" path="res://addons/gameAssetImporter/scenes/autocomplete/autocomplete.tscn" id="2_l7r0g"]
[ext_resource type="Script" uid="uid://nvd1hsryd2r8" path="res://addons/gameAssetImporter/scenes/console/execute.gd" id="2_nu70b"]
[ext_resource type="Script" uid="uid://bv55m1kwlvyj" path="res://addons/gameAssetImporter/scenes/console/nativeFuncs.gd" id="4_p86el"]

[sub_resource type="InputEventKey" id="InputEventKey_vhftn"]
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_gly34"]
events = [SubResource("InputEventKey_vhftn")]

[node name="Console" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 3
script = ExtResource("1_w2nb2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.18, 0.18, 0.18, 0.976471)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="logText" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 2
bbcode_enabled = true
fit_content = true
scroll_following = true
autowrap_mode = 0
selection_enabled = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="input" parent="VBoxContainer/MarginContainer2/HBoxContainer" instance=ExtResource("2_l7r0g")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
shortcut_keys_enabled = false

[node name="inputSend" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
shortcut = SubResource("Shortcut_gly34")
text = "Submit"

[node name="execute" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_nu70b")

[node name="nativeFuncs" type="Node" parent="execute"]
script = ExtResource("4_p86el")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/inputSend" to="." method="_on_input_send_pressed"]
